[gd_scene load_steps=2 format=3 uid="uid://q6pkfe84sq80"]

[ext_resource type="Script" path="res://Menus/ingredients_menu.gd" id="1_gpsm5"]

[node name="IngredientsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpsm5")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 270.0
offset_bottom = 520.0

[node name="IngredientList" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
columns = 3

[node name="AddButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 533.0
offset_right = 110.0
offset_bottom = 557.0
text = "New"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 568.0
offset_right = 110.0
offset_bottom = 599.0
text = "Back"

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
